[tool.poetry]
name = "unp"
version = "0.3.0"
description = "Command line tool that can unpack archives easily"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
maintainers = ["Gunung P. Wibisono <55311527+gunungpw@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/mitsuhiko/unp"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "unp/*.py" },
]

[tool.poetry.scripts]
unpack = "unp.console:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
